# DSP

./: .gitattributes  .gitignore  DSPL Verslag.docx  README.md  ~$PL Verslag.docx
software/DSB/: welkom.txt
software/STM32Basis/: ARMCortexMToolchain.cmake  BasisSTM32.cmake
software/opdracht1/Basis/: applikatie1.cpp
software/opdracht1/STUDENT/: dsbComplex.cpp
software/opdracht1/VisualStudio_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DSPESEL1.sln  DSPESEL1.vcxproj  DSPESEL1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
software/opdracht2/STUDENT/: gemwaarde.cpp  gemwaarde.h
software/opdracht2/VisualStudio_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DSPESEL2.sln  DSPESEL2.vcxproj  DSPESEL2.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
software/opdracht3/STUDENT/: signaal.cpp
software/opdracht3/VisualStudio_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DSPESEL3.sln  DSPESEL3.vcxproj  DSPESEL3.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
software/opdracht4/Basis/: applikatie4.cpp
software/opdracht4/STUDENT/ontwerper/: CMakeLists.txt  demofiltercoeffs.h  filterDesigner.cpp  filterDesigner.h  filterDesignerBasis.cpp
software/opdracht4/STUDENT/ontwerper/h/: filterDesignerBasis.h
software/opdracht4/VisualStudio_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DSPESEL4.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
software/opdracht5/Basis/: main.cpp  (+1 more)
(+579 files in other folders)
